--- a/Java Parallel program/Java并发编程实践/15-原子变量和非阻塞同步机制.ipynb
+++ b/Java Parallel program/Java并发编程实践/15-原子变量和非阻塞同步机制.ipynb
@@ -4,12 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 四. 非阻塞算法\n",
+    "### 一. 锁的弊端\n",
+    "1. **频繁的线程挂起和恢复**  \n",
+    "  当多个线程发生锁竞争时, 那些没有获取锁的线程可能会被挂起并在稍后恢复执行(当发生锁竞争时, jvm不一定直接挂起线程, 而是根据之前获取操作中对锁的持有时间长短来判断是挂起还是自旋等待). 而当线程被唤醒后, 还要等待其他线程执行完他们的时间片以后, 才能被调度执行; 当锁上存在激烈的时候, 调度开销与工作开销的壁纸会非常高  \n",
+    "2. **悲观锁与乐观锁**\n",
+    "    1. 悲观锁:   \n",
+    "       锁独占是一项悲观技术, 它假设最坏情况(如果不锁门, 捣蛋鬼就会闯进物资搞得一团糟), 只有在确保其他线程不会对其进行干扰后才能执行下去  \n",
+    "    2. 乐观锁:  \n",
+    "       这种方法首先进行冲突检查判断在更新过程中是否有来自其他线程的干扰, 如果存在, 这个操作失败, 并且继续重试\n",
+    "3. **比较并交换CAS**\n",
+    "    1. 大多数处理器架构中, 都有cas指令, 即\"我认为v的值是A, 如果是则将v的值更新为B, 否则不更新\"\n",
+    "    2. CAS操作失败时, 不再次进行尝试而是什么不做, 这种做法是可取的; 因为在非阻塞算法中, 如下面的非阻塞链表or队列, 如果cas失败, 意味着其他线程完成了你要执行的操作.  \n",
+    "    3. CAS在大多数情况下都能执行成功(所竞争不激烈的情况下), 因此硬件能够准确地预测while循环内的分支, 将复杂控制逻辑的开销降到最低\n",
+    "4. **使用CAS维持多个变量的不可变性条件**\n",
+    "<img src=\"img/cas.png\" width=\"80%\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 二. 非阻塞算法\n",
     "基于锁的算法可能发生各种活跃性故障, 如某个线程再持有锁时由于I/O阻塞, 内存缺页或其他延迟导致推迟执行, 则由于延迟中并没有释放锁, 所以其他线程获取锁的操作也会推迟;   \n",
     "如果算法中, 一个线程的失败或挂起不会导致其它线程也失败或挂起, 则这种算法称作**非阻塞算法**;  \n",
     "如果算法的每个步骤中都存在某个线程可以执行下去, 则这种算法也称为**无锁(Lock-Free)算法**  \n",
     "许多数据结构都可以使用非阻塞算法实现, 包括栈, 队列, 优先级队列和散列表等, 来实现非阻塞的并发数据结构\n",
-    "#### 4.1 **非阻塞的栈**\n",
+    "#### 2.1 **非阻塞的栈**\n",
     "1. 实现相同功能的前提下, 非阻塞算法要比阻塞算法更为复杂; 创建非阻塞算法的关键在于: 如何将原子修改限制于单个变量上, 同时还维护数据的一致性  \n",
     "2. 对于非阻塞算法下实现的栈, 同样要满足上诉2点. 栈是简单的, 因为栈中每个节点仅有一个指针指向另一个节点, 数据一致性也仅仅是栈顶top节点的指向  \n",
     "    1. push算法:  \n",
@@ -21,7 +41,7 @@
     "        \n",
     "<img src=\"img/concurrentStack2.png\" width=\"83%\">\n",
     "\n",
-    "#### 4.2 **非阻塞的队列**\n",
+    "#### 2.2 **非阻塞的队列**\n",
     "1. 难度更大的非阻塞队列  \n",
     " &nbsp;&nbsp;&nbsp;&nbsp;非阻塞的队列实现比非阻塞的栈要复杂, 一个原因是队列需要维护两个节点, head和tail, 前者用于获取队列头部, 后者用于插入元素到队列尾部;  \n",
     " 其次, 由于队列数据结构的特点, 其插入操作也更为复杂, 原因如下: \n",
