--- a/Java Parallel program/Java并发编程实践/5-构建基础模块.ipynb
+++ b/Java Parallel program/Java并发编程实践/5-构建基础模块.ipynb
@@ -17,7 +17,10 @@
     "  2. 确保当前线程对volatile变量的修改, 能即时写回到 共享主内存中, 并被其他线程看见  \n",
     "  3. volatile声明的变量, 将破事所有线程均读写主内存中的变量值, 从而使得volatile变量在多线程间可见    \n",
     "4. -server模式  \n",
-    " java在'-server'模式下, JVM不回去读取未发生变化且未标记为volatile的共享变量, 使得变量的修改在线程之间是不可见的"
+    " java在'-server'模式下, JVM不回去读取未发生变化且未标记为volatile的共享变量, 使得变量的修改在线程之间是不可见的\n",
+    "5. volatile与指令重拍  \n",
+    "   &nbsp;&nbsp;&nbsp;&nbsp;编译器以及CPU为了优化代码执行的效率, 可能会使得本来在代码上发生的先执行a再执行b, 优化后变成先执行b再执行a; 这在单线程程序中不会发生异常, 但是在多线程环境中可能破坏了操作之间的happens-before限制, 导致发生位置问题.  \n",
+    "   &nbsp;&nbsp;&nbsp;&nbsp;使用volatile关键字后, 除了提供内存可见性语义, 还会避免volatile附近的代码发生指令重排序, 使得线程安全; volatile的缺点是变量只会存在内存中, 而不会进入寄存器等不可见地方, 一定程度上降低读写效率"
    ]
   },
   {
