--- a/GC/oracle - Java Garbage Collection2.ipynb
+++ b/GC/oracle - Java Garbage Collection2.ipynb
@@ -65,7 +65,7 @@
     "#### 三. 垃圾回收的步骤  \n",
     "* Step 1: 标记\n",
     "    * gc收集器在此步区分开正在使用, 和未被使用的内存片\n",
-    "    * 为了区分哪些对象在使用, 儿那些没有在使用, 所有对象都要被被scan(扫描)一次. 这种操作很消耗时间\n",
+    "    * 为了区分哪些对象在使用, 哪些没有在使用, 所有对象都要被scan(扫描)一次. 这种操作很消耗时间\n",
     "        * 如下图, 正在被引用的对象用蓝色标出, 没有引用的对象用金色标出  \n",
     "<img src='img/marking1.png' height='60%' width='60%' align='left'>    "
    ]
@@ -75,7 +75,7 @@
    "metadata": {},
    "source": [
     "* Step 2: Normal Deletion\n",
-    "    * 该步骤将删除未被引用的对象(金色的), 使得memory allocator(内存分配器)持有指向标free space的指针,   \n",
+    "    * 该步骤将删除未被引用的对象(金色的), 使得memory allocator(内存分配器)持有指向free space的指针,   \n",
     "      下次分配对象时用这些free space空间来产生对象  \n",
     "      \n",
     " <img src='img/deletion.png' width='60%' height='60%' align='left'> "
@@ -163,7 +163,7 @@
    "metadata": {},
    "source": [
     "* 6.随着minor gc的不断发生, 越来越多的对象被提升(promotion)到老年代  \n",
-    "* 7.随着青年代不断的至=执行上述整个流程, 最终触发老年代的major gc. 老年代中, 未被引用的对象将被清除, 存在引用的对象将被压缩到老年代的一端(clean up and compact)  \n",
+    "* 7.随着青年代不断的执行上述整个流程, 最终触发老年代的major gc. 老年代中, 未被引用的对象将被清除, 存在引用的对象将被压缩到老年代的一端(clean up and compact)  \n",
     "\n",
     "<img src='img/pro4.png' width='60%' height='60%' align='left'>"
    ]
@@ -238,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
