--- a/Java NetWork/2.7 Non-blocking Sever.ipynb
+++ b/Java NetWork/2.7 Non-blocking Sever.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 一. 读到partial message\n",
+    "### 一. 读到partial message\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;当从SelectableChannel中读取一块数据时,并不知道这块数据是比1条message的数据多还是少. \n",
     "一个数据块可能包含3种数据: 部分信息(短于1条message),正好一条message, 多于1条message; 处理partial message要注意两点:\n",
     "<img src=\"img/non-blocking-server-6.png\" width=\"48%\" height=\"48%\" align=\"right\">\n",
@@ -22,11 +22,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 二. 保存partial message\n",
-    "### 1. Resize by Copy\n",
+    "### 二. 保存partial message\n",
+    "#### 1. Resize by Copy\n",
     "一旦一个message被pipeline完全处理完毕, 就要去释放其buffer占用的内存, 下次从这个连接中收到数据时, 再次从最小的buffer size开始\n",
     "\n",
-    "### 3. TLV加密信息\n",
+    "#### 3. TLV加密信息\n",
     "&nbsp;&nbsp;&nbsp;&nbsp;TLV格式(type,length,value).一些协议支持把message封装成TLV格式, 这意味着, message的头部存储着mesage的长度, 接收端立刻就能知道为该mesage分配多大的内存来存储  \n",
     "&nbsp;&nbsp;&nbsp;&nbsp;TLV格式让内存管理变得很容易, 且没有一点内存浪费.   \n",
     "&nbsp;&nbsp;&nbsp;&nbsp;TLV格式的一个缺点是, 在消息全部抵达接收端以前, 就为该message分配全部内存; 如果一个速度很慢的连接发送一个长度很大的message', 会让接受者立刻分配其剩余的所有内存, 导致服务无响应\n"
@@ -95,7 +95,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
