--- a/hadoop/Yarn/4-FairScheduler的抢占机制.ipynb
+++ b/hadoop/Yarn/4-FairScheduler的抢占机制.ipynb
@@ -4,58 +4,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 一. Enabling Preemption\n",
-    "* YARN FairScheduler会抢占在某些队列中处于running状态的container, 如果以下三个条件均满足:\n",
-    "    * 该队列申请到的资源超过其Instantaneous FairShare\n",
-    "    * 有1个活多个处于饥饿状态的app\n",
-    "    * 开启preemption\n",
-    "* 集群利用率通常是开启preemption的先决条件, 在利用率低的集群上开启container抢占机制会引起不必要的container波动, 集群利用率通常是由vCores 或memory中使用较大的那个值\n",
+    "### Starvation and Preemption\n",
+    "饥饿和抢占是一组相关的概念, 最好放在一起讨论. 如下的fairshare均指Instantaneous fairshare\n",
     "\n",
-    "* 队列可以声明成不能被强占,来突出他的高优先级\n",
+    "#### 一. enable preemption    \n",
+    "fairScheduler 会抢占一些队列中的container, 如果该队列的资源使用超过了队列的Instantaneous FairShare, 且有如下两个条件发生: \n",
+    "* 存在饥饿状态的应用\n",
+    "* preemption是enabled状态\n",
     "\n",
-    "* 有两种类型的饥饿 starvation\n",
-    "    * FairShare Starvation\n",
-    "    * MinShare Starvation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 二. 两种饥饿\n",
-    "* FairShare Starvation\n",
-    "    1. 一个app是FairShare Starvation的, 如果以下条件均满足:\n",
-    "        * app所需资源并未得到满足\n",
-    "        * app的占用资源小于他的Instantaneous FairShare(整数)乘以FairShare Preemption Threshold(百分比)  \n",
-    "        * app满足以上两个条件至少持续了FairShare Preemption Timeout时间   \n",
-    "          FairShare Preemption Timeout默认不去配置, FairShare Preemption Threshold默认为0.5,   \n",
-    "          FairShare Preemption Timeout为了延缓资源抢占的时间\n",
+    "集群在什么时候Preemption是enabled的? 档如下两个条件同时发生时:\n",
+    "* `yarn.scheduler.fair.preemption`参数设置为true\n",
+    "* cluster级的资源利用率超过了一个阈值, 默认是80%, 由参数`yarn.scheduler.fair.premption.cluster-utilization-threshold`设置  \n",
+    "\n",
+    "因为在cluster级的资源利用率很低时对container执行preemption的话会影响集群效率, cluster级的资源利用率是根据cpu core和内存使用量计算得来的.  \n",
+    "当然, 队列也可以被设置为不可被抢占的, 为了让该队列会有较高的优先级\n",
+    "\n",
+    "#### 二. fairshare starvation\n",
+    "一个applicaiton时fareshare starved的, 如果以下条件全部满足: \n",
+    "* 该applicaiton有未满足的资源\n",
+    "* 该application的资源占有量低于其Instantaneous fairshare\n",
+    "* 该application占用的资源, 小于1个阈值* 它的Instataneous fairshare, 且超过了fairshare preemption timeout  \n",
+    "  该阈值默认为0.5, 而fairshare preemption timeout默认未被设置, 因此需要显式的被设置才能让一个应用成为饥饿的\n",
     "  \n",
-    "    假设已配置2个参数:  FairShare Preemption Timeout=5, FairShare Preemption Threshold=0.8, 这表示如果app在5秒内还没占用到其Instantaneous FairShare的80%的资源, \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;值得注意的是, 开启preemption也不能保证1个application或queue可以得到其所有的Instantaneous fairshare, 只是说在fairshare preemption timeout之后, application的资源占用可以达到`阈值*其Instantaneous fairshare`   \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;如果想把一个queue的优先级提高, 可以把该queue的starvation阈值调的很高, stavation timeout的时间调的很低, 且设置为不可被抢占的  \n",
+    "&nbsp;&nbsp;&nbsp;&nbsp;Instantaneous fairshare是queue级别的, 而fairshare starvation是application级别的. 这很重要, 因为可能一个队列并不是饥饿的, 但处在其中的applicaiton却是饥饿的. 一个占用资源超过其Instantaneous fairshare的application, 其container可以被任何队列的starved application占用  \n",
     "\n",
-    "    2. 开启preemption, 并不能保证队列中的app获得其全部的Instantaneous FairShare, 仅仅表示在preemption timeout超时时间后, app能占用其`Instantaneous FairShare*阈值` 的资源"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* MinShare Starvation\n",
-    "    1. 一个队列是MinShare Starvation的, 如果同时满足以下条件\n",
-    "        * 队列中至少有一个app存在不满足的资源要求的\n",
-    "        * 队列的资源占用小于其MinShare\n",
-    "        * 队列的资源占用小于其MinShare持续了至少MinShare Preemption Timeout的时间\n",
-    "    2. MinShare Preemption Timeout设置为了延缓进行资源抢占的时间\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* 一个container可以被强占, 除非以下2个条件同时满足\n",
-    "    * 这个container的作业所在的queue是可以被强占的\n",
-    "    * 杀死container不会使得app占用的资源小于其fair share(即不会因为被抢占而变成fairshare starv)\n",
-    "    * 无论是否配置了fair share饥饿和minshare饥饿, 都只有占用资源大于其Instantaneous FairShar出的作业可以被强占"
+    "#### 三. minshare starvation\n",
+    "一个queue是minshare starvation的, 只要如下条件都满足 : \n",
+    "* 队列中存在为满足资源的application\n",
+    "* 队列的资源占用率小于其minshare\n",
+    "* 队列的资源占用率小于其minshare, 持续了minshare preemption timeout的时间    \n",
+    "  该超时时间默认未被设置, 因此如果想要让queue可能被认为是minshare starvation的, 就需要显示的被设置  \n",
+    "  \n",
+    "minshare starvation是对列级别的, 一个application不可能处于minshare starvation状态\n",
+    "\n",
+    "#### 四. Containers to preemption\n",
+    "当有多个节点同时满足被抢占的资源请求时, 优先选择在container数量最少的节点抢占. 一个container时可被抢占的, 如果以下两个条件同时满足 : \n",
+    "* 该container所属的queue被设置成可被抢占的\n",
+    "* 杀死该container后, 不会引起对应的application占用资源小于其fairshare  \n",
+    "\n",
+    "minshare并不用于决定哪个container被占用, 它只用于配置是否是starvation的. 这很重要, 值得反复重复, 无论fairshare和minshare starvation是否配置了, 只有超过其fairshare的application可被抢占. 如下表定义: \n",
+    "<img src=\"img/preemption.png\">\n",
+    "\n",
+    "#### 五. 配置starvation的最佳实践\n",
+    "配置fairshare starvation是被推荐的, 而不推荐配置minshare starvation. 因为这会引起额外的复杂度 : \n",
+    "* 当queue发生minshare starvation, 队列中的container超过了minshare但没有超过fairshare的不会被抢占\n",
+    "* 同一个队列中的application, fairshare-starved是相同的\n",
+    "* 确保所有的minimum resources加起来后小于整体资源"
    ]
   }
  ],
